gitops/regions/us/staging/config/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: courtside-staging
spec:
  mtls:
    mode: STRICT
