gitops/regions/us/staging/config/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: courtside-staging-gateway
  namespace: courtside-staging
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "staging.courtside"
